Fixed cutoff text in some Mermaid diagrams (#31)

--- a/src/assets/stylesheets/main/integrations/_mermaid.scss
+++ b/src/assets/stylesheets/main/integrations/_mermaid.scss
@@ -39,4 +39,5 @@
 // Mermaid container
 .mermaid {
   margin: 1em 0;
+  line-height: normal;
 }
